--- a/.config/bspwm/panel/config.ini
+++ b/.config/bspwm/panel/config.ini
@@ -74,17 +74,37 @@ content-foreground = ${colors.fglight}
 content-padding = 4
 click-left = bash -c ~/.config/bspwm/launcher/rofi.sh &
 
+[module/title]
+type = internal/xwindow
+; Available tags:
+;   <label> (default)
+format = <label>
+format-padding = 4
+
+; Available tokens:
+;   %title%
+; Default: %title%
+label = %title%
+label-maxlen = 21
+
+; Used instead of label when there is no window title
+; Available tokens:
+;   None
+label-empty = Empty
+label-empty-foreground = #707880
+
 [module/workspaces]
 type = internal/xworkspaces
 pin-workspaces = true
 enable-click = true
 enable-scroll = true
 
-icon-0 = I; 󰲠
-icon-1 = II; 󰲢
-icon-2 = III; 󰲤
-icon-3 = IV; 󰲦
-icon-4 = V; 󰲨
+;󰲠󰲢󰲤󰲦󰲨
+icon-0 = I; 1
+icon-1 = II; 2
+icon-2 = III; 3
+icon-3 = IV; 4
+icon-4 = V; 5
 icon-default = 
 
 format = <label-state>
@@ -116,6 +136,8 @@ ping-interval = 10
 ;   <label-connected> (default)
 ;   <ramp-signal>
 format-connected = <label-connected>   <ramp-signal>
+;format-connected-prefix = 󱑤
+
 ; All labels support the following tokens:
 ;   %ifname%    [wireless+wired]
 ;   %local_ip%  [wireless+wired]
@@ -128,7 +150,7 @@ format-connected = <label-connected>   <ramp-signal>
 ;   %linkspeed% [wired]
 ;   %mac%       [wireless+wired] (New in version 3.6.0)
 ; Default: %ifname% %local_ip%
-label-connected = %downspeed% 
+label-connected =   %downspeed%  |
 label-connected-foreground = ${colors.foreground}
 ; Only applies if <ramp-signal> is used
 ramp-signal-0 = 󰤯
