--- a/.config/bspwm/panel/config.ini
+++ b/.config/bspwm/panel/config.ini
@@ -150,7 +150,7 @@ format-connected = <label-connected>   <ramp-signal>
 ;   %linkspeed% [wired]
 ;   %mac%       [wireless+wired] (New in version 3.6.0)
 ; Default: %ifname% %local_ip%
-label-connected =   %downspeed%  |  %upspeed%   
+label-connected =  %downspeed%  |  %upspeed% 
 label-connected-foreground = ${colors.foreground}
 ; Only applies if <ramp-signal> is used
 ramp-signal-0 = 󰤯
