--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -5,14 +5,14 @@ LC_ALL=C
 LANG=C
 
 print_info() {
-	prin "$(color 7)┌─────────────────────────────────────┐"
+	prin "$(color 0)┌─────────────────────────────────────┐"
 	info "$(color 1) ​ ​  " distro
 	info "$(color 2) ​ ​  " kernel
 	info "$(color 3) ​ ​  " packages
 	info "$(color 4) ​ ​  " wm
 	info "$(color 5) ​ ​  " term
-	info "$(color 6) ​ ​  " uptime
-	prin "$(color 7)└─────────────────────────────────────┘"
+	info "$(color 6) ​ ​  " uptime
+	prin "$(color 0)└─────────────────────────────────────┘"
 	prin " \n \n \n \n \n $(color 0) \n \n $(color 9) \n \n $(color 2) \n \n $(color 3)  \n \n $(color 4)  \n \n $(color 5)  \n \n $(color 6)  \n \n $(color 7)"
 }
 
